fix(ui): fix hidden dropdown items on small devices

--- a/automad/src/client/admin/styles/components/dropdown.less
+++ b/automad/src/client/admin/styles/components/dropdown.less
@@ -37,6 +37,7 @@
 	position: relative;
 	display: block;
 	cursor: pointer;
+	overflow: visible !important;
 	--space: 0.3rem;
 
 	&__items {
